--- a/LiteratureManage/WebContent/sources/css/demo.css
+++ b/LiteratureManage/WebContent/sources/css/demo.css
@@ -17,12 +17,12 @@ li {list-style: circle;font-size: 12px;}
 li.title {list-style: none;}
 ul.list {margin-left: 17px;}
 
-div.content_wrap {width: 600px;height:380px;}
-div.content_wrap div.left{float: left;width: 250px;}
-div.content_wrap div.right{float: right;width: 340px;}
-div.zTreeDemoBackground {width:250px;height:362px;text-align:left;}
+div.content_wrap {width: 100%;height:380px;}
+div.content_wrap div.left{float: left;width: 70%;}
+div.content_wrap div.right{float: right;width: 30%;}
+div.zTreeDemoBackground {width:100%;height:362px;text-align:left;}
 
-ul.ztree {margin-top: 10px;border: 1px solid #617775;background: #f0f6e4;width:220px;height:360px;overflow-y:scroll;overflow-x:auto;}
+ul.ztree {margin-top: 10px;border: 1px solid #617775;background: #f9f9f9;width:97%;height:360px;overflow-y:auto;overflow-x:auto;}
 ul.log {border: 1px solid #617775;background: #f0f6e4;width:300px;height:170px;overflow: hidden;}
 ul.log.small {height:45px;}
 ul.log li {color: #666666;list-style: none;padding-left: 10px;}
